# nexus-ATP

./: .gitignore  README.md  config.yml  pyproject.toml
data/state/: state.json
data/state/seeds/: common_aliases.yml  norms.yml
docs/: stage4_1_sqlite_diagnostico.sql
src/rg_atp_pipeline/: __init__.py  __main__.py  audit_compendio.py  citations_ui.py  cli.py  config.py  fetcher.py  http_client.py  llm_review.py  logging_utils.py  norms_ui.py  ollama_client.py  paths.py  planner.py  project.py  queries.py  relations_ui.py  rg_detector.py  state.py  storage_sqlite.py  streamlit_app.py  structure_segmenter.py  structure_ui.py  text_extractor.py  web_ui.py
src/rg_atp_pipeline/services/: __init__.py  citations_service.py  graphrag_validation.py  llm_verifier.py  manual_upload.py  norm_merge.py  norm_seed.py  reference_extractor.py  relation_extractor.py  relation_llm.py  relations_service.py  seed_common_aliases.py
tests/: test_audit_compendio.py  test_citations_service.py  test_cli_relations_index_diagnose.py  test_fetcher.py  test_graphrag_validation.py  test_init.py  test_llm_verifier.py  test_logging_utils.py  test_migrations_relation_reviews.py  test_missing_downloads_review.py  test_norm_merge.py  test_norm_seed.py  test_norms.py  test_norms_ui.py  test_planner.py  test_reference_extractor.py  test_relation_extractor.py  test_relation_llm.py  test_relations_service.py  test_relations_ui.py  test_rg_detector.py  test_seed_common_aliases.py  test_stage4_units_evidence.py  test_structure_queries.py  test_structure_segmenter.py  test_text_extractor.py
(+5 files in other folders)
