[project]
name = "rg_atp_pipeline"
version = "0.1.0"
description = "Pipeline de descarga y procesamiento ATP (Etapa 0: andamiaje)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "pypdf>=4.2",
  "requests>=2.0",
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "reportlab>=4.0",
  "responses>=0.25",
]
ui = [
  "streamlit>=1.30",
  "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
